# dreamchess

./: .appveyor.yml  .clang-format  .gitattributes  .gitignore  .travis.yml  AUTHORS  AUTHORS.txt  AnarchyChesRules.txt  CMakeLists.txt  COPYRIGHT  ChangeLog  INSTALL  Info.plist  Makefile.am  NEWS  NEWS.md  NEWS.txt  README  README.md  autogen.sh  config.h.in  configure.ac  main.cpp  test_c99_varargs.c  vcpkg.json
common/src/: CMakeLists.txt  git_rev.c.in  git_rev.cpp.in  msgbuf.c  msgbuf.cpp  msgbuf.h  pipe_unix.c  pipe_unix.cpp  pipe_win32.c  pipe_win32.cpp  san_parse.y
common/src/include/: git_rev.h  i18n.h  pipe_unix.h  pipe_win32.h  san.h
dreamchess/src/: CMakeLists.txt  ChessBoard.cpp  DreamChess.cpp  DreamChess.h  Game.cpp  Game.h  GameConfig.cpp  GameConfig.h  Group.cpp  Group.h  History.cpp  History.h  Image.cpp  Image.h  Main.cpp  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Object.cpp  Object.h  ResourcePool.cpp  ResourcePool.h  Scene.cpp  Scene.h  System.cpp  System.h  Texture.cpp  Texture.h  TitleScene.cpp  TitleScene.h  board.c  board.cpp  board.h  comm.c  comm.cpp  comm.h  comm_unix.c  comm_unix.cpp  comm_win32.c  (+35 more)
dreamchess/src/audio/: playlist.c  playlist.cpp  sdlmixer.c  sdlmixer.cpp
dreamchess/src/backend/: audio.cpp  backend.cpp  backend.h  dir.cpp  playlist.h
dreamchess/src/dialogs/: configuration.c  configuration.cpp  dialogs.h  ingame_dialog.c  ingame_dialog.cpp  message_dialog.c  message_dialog.cpp  quit_dialog.c  quit_dialog.cpp  resolution.c  resolution.cpp  styles.c  styles.cpp  system_dialog.c  system_dialog.cpp  time.c  time.cpp
dreamchess/src/gamegui/: action.c  action.cpp  action.h  align.c  align.cpp  bin.c  bin.cpp  box.c  box.cpp  box.h  clipping.c  clipping.cpp  clipping.h  container.c  container.cpp  dialog.c  dialog.cpp  dialog.h  edit.c  edit.cpp  entry.c  entry.cpp  entry.h  frame.c  frame.cpp  hbox.c  hbox.cpp  image.c  image.cpp  image.h  label.c  label.cpp  option.c  option.cpp  scrollbarv.c  scrollbarv.cpp  scrollbarv.h  select.c  select.cpp  select.h  (+16 more)
dreamchess/src/gamegui++/: gamegui++.cpp
dreamchess/src/gui/: colours.c  colours.cpp  credits.c  credits.cpp  draw_scene.c  draw_scene.cpp  draw_shape.c  draw_shape.cpp  gamegui_driver.c  gamegui_driver.cpp  get_move.c  get_move.cpp  ingame_ui.c  ingame_ui.cpp  load_data.c  load_data.cpp  opengl.c  opengl.h  promote_dialog.c  promote_dialog.cpp  saveload_dialog.c  saveload_dialog.cpp  system.c  system.cpp  system.h  text.c  text.cpp  texture.c  texture.cpp  theme.c  theme.cpp  title_dialog.c  title_dialog.cpp  transitions.c  transitions.cpp  ui_sdlgl.c  ui_sdlgl.cpp  ui_sdlgl.h  ui_sdlgl_3d.c  ui_sdlgl_3d.cpp  (+9 more)
dreamchess/src/include/: audio.h  dialogs.h  engine.h  gamegui.h  options.h  system_config.h  theme.h
dreamer/src/: CMakeLists.txt  board.c  board.cpp  board.h  commands.c  commands.cpp  commands.h  dreamer.c  dreamer.cpp  dreamer.h  e_comm.c  e_comm.cpp  e_comm.h  e_comm_unix.c  e_comm_win32.c  e_comm_win32.cpp  eval.c  eval.cpp  eval.h  gen_chess_moves.c  gen_chess_moves.cpp  hashing.c  hashing.cpp  hashing.h  history.c  history.h  main.c  main.cpp  makebook.c  makebook.cpp  makebook.h  move.c  move.cpp  move.h  move_data.h  pgn_parser.y  pgn_scanner.h  pgn_scanner.l  repetition.c  repetition.cpp  (+12 more)
src/: Board.cpp  CMakeLists.txt  Game.cpp  History.cpp  Makefile.am  beos.rdef  board.c  board.h  browser.c  comm.c  comm.h  comm_sdlthd.c  comm_unix.c  comm_win32.c  credits.c  credits.h  datadir.c  datadir.h  debug.c  debug.h  dir.c  dir.h  dreamchess.c  dreamchess.h  fen.c  fen.h  history.c  history.h  main.c  main.cpp  main_sdlthd.c  news.c  options.c  pgn_parser.y  pgn_scanner.h  pgn_scanner.l  strptime.c  strptime.h  system_config.c  theme.c  (+7 more)
src/audio/: Makefile.am  playlist.c  playlist.h  sdlmixer.c
src/common/: CMakeLists.txt  git_rev.c.in  msgbuf.h  pipe_win32.c  san_parse.y
src/dreamchess/: CMakeLists.txt  board.c  credits.c  dpi.manifest  dreamchess.c  dreamchess.h  options.c  win32.rc
src/dreamchess/dialogs/: message_dialog.c  time.c
src/dreamchess/gamegui/: dialog.c  frame.c  seperatorv.c  signal.c  vbox.c
src/dreamchess/gui/: gamegui_driver.c  get_move.c  load_data.c  text.c  (+1 more)
src/dreamer/: CMakeLists.txt  Makefile.am  board.c  board.h  clock.c  clock.h  commands.c  commands.h  dreamer.c  dreamer.h  e_comm.c  e_comm.h  e_comm_sdlthd.c  e_comm_unix.c  e_comm_win32.c  eval.c  eval.h  gen_chess_moves.c  hashing.c  hashing.h  history.c  history.h  main.c  makebook.c  makebook.h  move.c  move.h  move_data.h  pgn_parser.y  pgn_scanner.l  repetition.c  repetition.h  san.h  search.c  search.h  state.h  timer.c  timer.h  transposition.c  transposition.h
src/gamegui_dialogs/: Makefile.am  chat.c  configuration.c  ingame_dialog.c  message_dialog.c  network.c  quit_dialog.c  resolution.c  styles.c  system_dialog.c  systemopts.c  time.c
src/include/: Makefile.am  audio.h  browser.h  engine.h  gamegui.h  gamegui_dialogs.h  git_rev.h  main_sdlthd.h  mxml.h  network.h  news.h  options.h  pipe_mem.h  pipe_unix.h  pipe_win32.h  san.h  system_config.h  theme.h
src/libs/: CMakeLists.txt  Makefile.am  git_rev.c.in  msgbuf.c  msgbuf.h  msglist.c  msglist.h  pipe_beos.c  pipe_mem.c  pipe_unix.c  pipe_win32.c  san_parse.y
src/macosx/: Info.plist.in  Makefile.am  SDLMain.m  config.h  makeapp.pl
src/network/: Makefile.am  http.c  null.c  sdlnet.c
src/ui/: Makefile.am  box.cpp  camera.cpp  chess_board.cpp  entity.cpp  entity_group.cpp  game.cpp  input.cpp  light.cpp  luatest.cpp  luatest.h  luatest.i  mesh.cpp  model.cpp  resource.cpp  scene.cpp  screen.cpp  script.cpp  texture.cpp  title.cpp  title_camera.cpp
src/ui_sdlgl/: Makefile.am  colours.c  credits.c  draw_scene.c  draw_shape.c  gamegui_driver.c  get_move.c  ingame_dialog.c  ingame_ui.c  load_data.c  matrix.c  matrix.h  message_dialog.c  promote_dialog.c  quit_dialog.c  saveload_dc.c  saveload_dialog.c  system.c  system_dialog.c  systemopts_dialog.c  text.c  texture.c  theme.c  title_dialog.c  transitions.c  ui_sdlgl.c  ui_sdlgl.h  ui_sdlgl_3d.c  ui_sdlgl_3d.h  victory_dialog.c  vkeyboard.c  xmlsavefile.c
(+357 files in other folders)
